# nyx-harness

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
docs/: index.html
nyx/: __init__.py  __main__.py
nyx/assets/: logo.txt
nyx/core/: __init__.py  chat.py  client.py  config.py  updater.py
nyx/tools/: __init__.py  calc_demo.py  calculator.py  doc_search.py  docs.py  registry.py
nyx/tui/: __init__.py  app.py  config_modal.py  doc_browser.py  doc_page_view.py  markdown_renderer.py
